// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Home /> should render Home component 1`] = `
<div
  class="sc-eTNxZ cjXmkm"
>
  <div
    class="item playlist"
    data-testid="playlist-item-0"
    id="playlist-item-0"
  >
    <img
      alt="Playlist 1"
      height="130"
      src="https://mosaic.scdn.co/101"
      width="130"
    />
    <div
      class="sc-guDMob jLqGJD"
    >
      Playlist 1
    </div>
  </div>
  <div
    class="item playlist"
    data-testid="playlist-item-1"
    id="playlist-item-1"
  >
    <img
      alt="Playlist 2"
      height="130"
      src="https://mosaic.scdn.co/201"
      width="130"
    />
    <div
      class="sc-guDMob jLqGJD"
    >
      Playlist 2
    </div>
  </div>
  <div
    class="item playlist"
    data-testid="playlist-item-2"
    id="playlist-item-2"
  >
    <img
      alt="Playlist 3"
      height="130"
      src="https://mosaic.scdn.co/301"
      width="130"
    />
    <div
      class="sc-guDMob jLqGJD"
    >
      Playlist 3
    </div>
  </div>
  <div
    class="item playlist"
    data-testid="playlist-item-3"
    id="playlist-item-3"
  >
    <img
      alt="Playlist 4"
      height="130"
      src="https://mosaic.scdn.co/401"
      width="130"
    />
    <div
      class="sc-guDMob jLqGJD"
    >
      Playlist 4
    </div>
  </div>
  <div
    class="item playlist new "
    data-testid="add-playlist-item"
    id="add-playlist-item"
  >
    <svg
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 1024 1024"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M696 480H544V328c0-4.4-3.6-8-8-8h-48c-4.4 0-8 3.6-8 8v152H328c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8h152v152c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V544h152c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8z"
      />
      <path
        d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
      />
    </svg>
  </div>
</div>
`;

exports[`<Home /> should render Home component with empty page 1`] = `
<div
  class="sc-eTNxZ cjXmkm"
>
  <div
    data-testid="empty-loading"
  />
</div>
`;

exports[`<Home /> should render Home component with loading skeletons 1`] = `
<div
  class="sc-eTNxZ cjXmkm"
>
  <div
    class="item"
    data-testid="playlist-item-skeleton-0"
    id="playlist-item-skeleton-0"
  >
    <span
      aria-busy="true"
      aria-live="polite"
    >
      <span
        class="react-loading-skeleton"
        style="height: 100%; border-radius: 15px; --base-color: #020202; --highlight-color: #444;"
      >
        ‌
      </span>
      <br />
    </span>
  </div>
  <div
    class="item"
    data-testid="playlist-item-skeleton-1"
    id="playlist-item-skeleton-1"
  >
    <span
      aria-busy="true"
      aria-live="polite"
    >
      <span
        class="react-loading-skeleton"
        style="height: 100%; border-radius: 15px; --base-color: #020202; --highlight-color: #444;"
      >
        ‌
      </span>
      <br />
    </span>
  </div>
  <div
    class="item"
    data-testid="playlist-item-skeleton-2"
    id="playlist-item-skeleton-2"
  >
    <span
      aria-busy="true"
      aria-live="polite"
    >
      <span
        class="react-loading-skeleton"
        style="height: 100%; border-radius: 15px; --base-color: #020202; --highlight-color: #444;"
      >
        ‌
      </span>
      <br />
    </span>
  </div>
  <div
    class="item"
    data-testid="playlist-item-skeleton-3"
    id="playlist-item-skeleton-3"
  >
    <span
      aria-busy="true"
      aria-live="polite"
    >
      <span
        class="react-loading-skeleton"
        style="height: 100%; border-radius: 15px; --base-color: #020202; --highlight-color: #444;"
      >
        ‌
      </span>
      <br />
    </span>
  </div>
  <div
    class="item"
    data-testid="playlist-item-skeleton-4"
    id="playlist-item-skeleton-4"
  >
    <span
      aria-busy="true"
      aria-live="polite"
    >
      <span
        class="react-loading-skeleton"
        style="height: 100%; border-radius: 15px; --base-color: #020202; --highlight-color: #444;"
      >
        ‌
      </span>
      <br />
    </span>
  </div>
  <div
    class="item playlist new new-disabled"
    data-testid="add-playlist-item"
    id="add-playlist-item"
  >
    <svg
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 1024 1024"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M696 480H544V328c0-4.4-3.6-8-8-8h-48c-4.4 0-8 3.6-8 8v152H328c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8h152v152c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V544h152c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8z"
      />
      <path
        d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
      />
    </svg>
  </div>
</div>
`;

exports[`<Home /> should render Home component with no monitored playlists 1`] = `
<div
  class="sc-eTNxZ cjXmkm"
>
  <div
    class="item playlist new "
    data-testid="add-playlist-item"
    id="add-playlist-item"
  >
    <svg
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 1024 1024"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M696 480H544V328c0-4.4-3.6-8-8-8h-48c-4.4 0-8 3.6-8 8v152H328c-4.4 0-8 3.6-8 8v48c0 4.4 3.6 8 8 8h152v152c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V544h152c4.4 0 8-3.6 8-8v-48c0-4.4-3.6-8-8-8z"
      />
      <path
        d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
      />
    </svg>
  </div>
</div>
`;
